[package]
name = "nautilus-plugin"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
authors.workspace = true
license.workspace = true
description = "Plug-in system for the Nautilus trading engine"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_plugin"
crate-type = ["rlib"]

[features]
default = []
# Enables host-side loading + the engine-side bridge adapters. Plug-in
# cdylibs should NOT enable this; backtest and live host crates do.
host = ["dep:libloading", "dep:nautilus-trading", "dep:serde", "dep:serde_json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-common = { workspace = true }
nautilus-core = { workspace = true }
nautilus-model = { workspace = true }

nautilus-trading = { workspace = true, optional = true }

anyhow = { workspace = true }
indexmap = { workspace = true }
libloading = { workspace = true, optional = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
ustr = { workspace = true }

[[bench]]
name = "normalize"
harness = false
required-features = ["host"]

[[example]]
name = "custom_data_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false

[[example]]
name = "runtime_smoke_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false

[[example]]
name = "exec_test_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false

[[example]]
name = "actor_event_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false

[[example]]
name = "bad_missing_init_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false

[[example]]
name = "bad_null_manifest_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false

[[example]]
name = "bad_abi_manifest_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false

[[example]]
name = "bad_invalid_manifest_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false

[[example]]
name = "bad_init_panic_plugin"
crate-type = ["cdylib"]
required-features = []
doc = false
test = false
