[package]
name = "nautilus-plugin"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
authors.workspace = true
license.workspace = true
description = "Plug-in system for the Nautilus trading engine"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_plugin"
crate-type = ["rlib"]

[features]
default = []
# Compatibility feature retained for downstream manifests
host = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-model = { workspace = true }

log = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
