[package]
name = "nautilus-portfolio"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Portfolio components and functionality for the Nautilus trading engine"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_portfolio"
crate-type = ["rlib"]

[features]
default = []
extension-module = ["python", "pyo3/extension-module"]
python = ["pyo3", "pyo3-stub-gen"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-analysis = { workspace = true }
nautilus-common = { workspace = true }
nautilus-core = { workspace = true }
nautilus-model = { workspace = true, features = ["stubs"] }

pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

ahash = { workspace = true }
bon = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "portfolio"
path = "benches/portfolio.rs"
harness = false
