[package]
name = "nautilus-reputation"
version = "0.1.0"
edition = "2021"
description = "ERC-8004 reputation attestation layer for KuaaMU Quant Engine"
license = "LGPL-3.0-or-later"

[dependencies]
nautilus-core = { path = "../core" }
nautilus-model = { path = "../model" }
nautilus-agent-swarm = { path = "../agent_swarm" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Ethereum
ethers = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
sha3 = "0.10"

# UUID
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"

# Utilities
ustr = "1"

[features]
default = []
